--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "vue-router": "^4.6.3"
   },
   "devDependencies": {
+    "@nuxtjs/sitemap": "^7.4.7",
     "@tailwindcss/postcss": "^4.1.17",
     "autoprefixer": "^10.4.22",
     "postcss": "^8.5.6",
